fix: change plugin name `phopkrity` to `cordova-plugin-thai-n-id`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phopkrity",
+  "name": "cordova-plugin-thai-n-id",
   "version": "1.0.0",
   "description": "Plugin card reader",
   "cordova": {
